# bzip2gpu

./: CMakeLists.txt  SOURCES.md  TODO.md
include/: cli.h  compression.h  io.h  stopwatch.h  utils.h
src/: main.cpp
src/compression/: compress.cu  crc32.cpp  crc32.h  fbwt.cu  fmtf.cu  huffman.cu  huffman.cu.old  huffman_encode.cu  rle1.cu  rle2.cu
src/utils/: argsparce.cpp  io.cpp
tests/: io.cpp
tests/compression/: compress.cu  fbwt.cu  fmtf.cu  huffman.cu  rle1.cu  rle2.cu
